<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_title"
            android:inputType="textAutoComplete|textCapWords"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="@dimen/big_padding"
            android:autoLink="web|email|phone"
            android:fontFamily="sans-serif-light"
            android:gravity="top"
            android:hint="@string/hint_text"
            android:inputType="textAutoComplete|textCapWords"
            android:linksClickable="true"
            android:minHeight="@dimen/min_height"
            android:singleLine="false"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/categoryRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/big_padding">

            <EditText
                android:id="@+id/categoryNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category_name"
                android:inputType="textAutoComplete|textCapWords" />

            <Button
                android:id="@+id/addCategoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorAccent"
                android:onClick="addCategory"
                android:text="@string/buttonAdd"
                android:textColor="@color/primaryTextColor" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/round_corner"
                android:contentDescription="@string/delete_category"
                android:onClick="deleteCategory"
                app:srcCompat="@drawable/ic_baseline_delete_24" />


        </LinearLayout>

        <View style="@style/Divider" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/primaryColor"
            android:onClick="saveNote"
            android:text="@string/button_save"
            android:textColor="@color/primaryTextColor" />
    </LinearLayout>
</ScrollView>